src/main/java/minijava/generated/minijavaParser.java
// Generated from minijava.g4 by ANTLR 4.4

	package minijava.generated;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

public class minijavaParser extends Parser {
	public static final int
		T__1=1, T__0=2, LBRACKET=3, RBRACKET=4, LBRACE=5, RBRACE=6, LCURLY=7, 
		RCURLY=8, SEMICOLON=9, COLON=10, DOT=11, CLASS=12, EXTENDS=13, PUBLIC=14, 
		STATIC=15, VOID=16, MAIN=17, INT=18, BOOLEAN=19, WHILE=20, IF=21, ELSE=22, 
		PRINT=23, NEW=24, THIS=25, RETURN=26, EQUAL_ASSIGN=27, AND=28, LESSTHAN=29, 
		PLUS=30, MINUS=31, TIMES=32, NOT=33, TRUE=34, FALSE=35, INTEGER_LITERAL=36, 
		IDENTIFIER=37, COMMENT=38, WS=39;
	public static final String[] tokenNames = {
		"<INVALID>", "'length'", "'String'", "'('", "')'", "'['", "']'", "'{'", 
		"'}'", "';'", "','", "'.'", "'class'", "'extends'", "'public'", "'static'", 
		"'void'", "'main'", "'int'", "'boolean'", "'while'", "'if'", "'else'", 
		"'System.out.println'", "'new'", "'this'", "'return'", "'='", "'&&'", 
		"'<'", "'+'", "'-'", "'*'", "'!'", "'true'", "'false'", "INTEGER_LITERAL", 
		"IDENTIFIER", "COMMENT", "WS"
	};
	public static final int
		RULE_goal = 0, RULE_program = 1, RULE_mainClass = 2, RULE_classDeclaration = 3, 
		RULE_methodDeclList = 4, RULE_varDeclList = 5, RULE_formalList = 6, RULE_stmList = 7, 
		RULE_varDeclaration = 8, RULE_methodDeclaration = 9, RULE_formal = 10, 
		RULE_type = 11, RULE_statement = 12, RULE_expression = 13, RULE_callArguments = 14;
	public static final String[] ruleNames = {
		"goal", "program", "mainClass", "classDeclaration", "methodDeclList", 
		"varDeclList", "formalList", "stmList", "varDeclaration", "methodDeclaration", 
		"formal", "type", "statement", "expression", "callArguments"
	};

	@Override
	public String getGrammarFileName() { return "minijava.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	public minijavaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public static class GoalContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(minijavaParser.EOF, 0); }
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public GoalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_goal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minijavaListener ) ((minijavaListener)listener).enterGoal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minijavaListener ) ((minijavaListener)listener).exitGoal(this);
		}
	}

	@RuleVersion(0)
	public final GoalContext goal() throws RecognitionException {
		GoalContext _localctx = new GoalContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_goal);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(30); program();
			setState(31); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramContext extends ParserRuleContext {
		public List<? extends ClassDeclarationContext> classDeclaration() {
			return getRuleContexts(ClassDeclarationContext.class);
		}
		public ClassDeclarationContext classDeclaration(int i) {
			return getRuleContext(ClassDeclarationContext.class,i);
		}
		public MainClassContext mainClass() {
			return getRuleContext(MainClassContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minijavaListener ) ((minijavaListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minijavaListener ) ((minijavaListener)listener).exitProgram(this);
		}
	}

	@RuleVersion(0)
	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(33); mainClass();
			setState(37);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==CLASS) {
				{
				{
				setState(34); classDeclaration();
				}
				}
				setState(39);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainClassContext extends ParserRuleContext {
		public TerminalNode RBRACKET() { return getToken(minijavaParser.RBRACKET, 0); }
		public TerminalNode LBRACE() { return getToken(minijavaParser.LBRACE, 0); }
		public List<? extends TerminalNode> LCURLY() { return getTokens(minijavaParser.LCURLY); }
		public TerminalNode LBRACKET() { return getToken(minijavaParser.LBRACKET, 0); }
		public TerminalNode MAIN() { return getToken(minijavaParser.MAIN, 0); }
		public TerminalNode RBRACE() { return getToken(minijavaParser.RBRACE, 0); }
		public TerminalNode STATIC() { return getToken(minijavaParser.STATIC, 0); }
		public TerminalNode RCURLY(int i) {
			return getToken(minijavaParser.RCURLY, i);
		}
		public TerminalNode VOID() { return getToken(minijavaParser.VOID, 0); }
		public List<? extends TerminalNode> RCURLY() { return getTokens(minijavaParser.RCURLY); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(minijavaParser.IDENTIFIER, i);
		}
		public TerminalNode LCURLY(int i) {
			return getToken(minijavaParser.LCURLY, i);
		}
		public TerminalNode PUBLIC() { return getToken(minijavaParser.PUBLIC, 0); }
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public TerminalNode CLASS() { return getToken(minijavaParser.CLASS, 0); }
		public List<? extends TerminalNode> IDENTIFIER() { return getTokens(minijavaParser.IDENTIFIER); }
		public MainClassContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainClass; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minijavaListener ) ((minijavaListener)listener).enterMainClass(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minijavaListener ) ((minijavaListener)listener).exitMainClass(this);
		}
	}

	@RuleVersion(0)
	public final MainClassContext mainClass() throws RecognitionException {
		MainClassContext _localctx = new MainClassContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_mainClass);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40); match(CLASS);
			setState(41); match(IDENTIFIER);
			setState(42); match(LCURLY);
			setState(43); match(PUBLIC);
			setState(44); match(STATIC);
			setState(45); match(VOID);
			setState(46); match(MAIN);
			setState(47); match(LBRACKET);
			setState(48); match(T__0);
			setState(49); match(LBRACE);
			setState(50); match(RBRACE);
			setState(51); match(IDENTIFIER);
			setState(52); match(RBRACKET);
			setState(53); match(LCURLY);
			setState(54); statement();
			setState(55); match(RCURLY);
			setState(56); match(RCURLY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassDeclarationContext extends ParserRuleContext {
		public ClassDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDeclaration; }
	 
		public ClassDeclarationContext() { }
		public void copyFrom(ClassDeclarationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ClassDeclContext extends ClassDeclarationContext {
		public MethodDeclListContext methodDeclList() {
			return getRuleContext(MethodDeclListContext.class,0);
		}
		public VarDeclListContext varDeclList() {
			return getRuleContext(VarDeclListContext.class,0);
		}
		public TerminalNode RCURLY() { return getToken(minijavaParser.RCURLY, 0); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(minijavaParser.IDENTIFIER, i);
		}
		public TerminalNode LCURLY() { return getToken(minijavaParser.LCURLY, 0); }
		public TerminalNode CLASS() { return getToken(minijavaParser.CLASS, 0); }
		public List<? extends TerminalNode> IDENTIFIER() { return getTokens(minijavaParser.IDENTIFIER); }
		public TerminalNode EXTENDS() { return getToken(minijavaParser.EXTENDS, 0); }
		public ClassDeclContext(ClassDeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minijavaListener ) ((minijavaListener)listener).enterClassDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minijavaListener ) ((minijavaListener)listener).exitClassDecl(this);
		}
	}

	@RuleVersion(0)
	public final ClassDeclarationContext classDeclaration() throws RecognitionException {
		ClassDeclarationContext _localctx = new ClassDeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_classDeclaration);
		int _la;
		try {
			_localctx = new ClassDeclContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(58); match(CLASS);
			setState(59); match(IDENTIFIER);
			setState(62);
			_la = _input.LA(1);
			if (_la==EXTENDS) {
				{
				setState(60); match(EXTENDS);
				setState(61); match(IDENTIFIER);
				}
			}

			setState(64); match(LCURLY);
			setState(65); varDeclList();
			setState(66); methodDeclList();
			setState(67); match(RCURLY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodDeclListContext extends ParserRuleContext {
		public List<? extends MethodDeclarationContext> methodDeclaration() {
			return getRuleContexts(MethodDeclarationContext.class);
		}
		public MethodDeclarationContext methodDeclaration(int i) {
			return getRuleContext(MethodDeclarationContext.class,i);
		}
		public MethodDeclListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodDeclList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minijavaListener ) ((minijavaListener)listener).enterMethodDeclList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minijavaListener ) ((minijavaListener)listener).exitMethodDeclList(this);
		}
	}

	@RuleVersion(0)
	public final MethodDeclListContext methodDeclList() throws RecognitionException {
		MethodDeclListContext _localctx = new MethodDeclListContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_methodDeclList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PUBLIC) {
				{
				{
				setState(69); methodDeclaration();
				}
				}
				setState(74);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclListContext extends ParserRuleContext {
		public List<? extends VarDeclarationContext> varDeclaration() {
			return getRuleContexts(VarDeclarationContext.class);
		}
		public VarDeclarationContext varDeclaration(int i) {
			return getRuleContext(VarDeclarationContext.class,i);
		}
		public VarDeclListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDeclList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minijavaListener ) ((minijavaListener)listener).enterVarDeclList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minijavaListener ) ((minijavaListener)listener).exitVarDeclList(this);
		}
	}

	@RuleVersion(0)
	public final VarDeclListContext varDeclList() throws RecognitionException {
		VarDeclListContext _localctx = new VarDeclListContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_varDeclList);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(75); varDeclaration();
					}
					} 
				}
				setState(80);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormalListContext extends ParserRuleContext {
		public TerminalNode COLON(int i) {
			return getToken(minijavaParser.COLON, i);
		}
		public List<? extends TerminalNode> COLON() { return getTokens(minijavaParser.COLON); }
		public List<? extends FormalContext> formal() {
			return getRuleContexts(FormalContext.class);
		}
		public FormalContext formal(int i) {
			return getRuleContext(FormalContext.class,i);
		}
		public FormalListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formalList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minijavaListener ) ((minijavaListener)listener).enterFormalList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minijavaListener ) ((minijavaListener)listener).exitFormalList(this);
		}
	}

	@RuleVersion(0)
	public final FormalListContext formalList() throws RecognitionException {
		FormalListContext _localctx = new FormalListContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_formalList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << BOOLEAN) | (1L << IDENTIFIER))) != 0)) {
				{
				setState(81); formal();
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COLON) {
					{
					{
					setState(82); match(COLON);
					setState(83); formal();
					}
					}
					setState(88);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmListContext extends ParserRuleContext {
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<? extends StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StmListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minijavaListener ) ((minijavaListener)listener).enterStmList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minijavaListener ) ((minijavaListener)listener).exitStmList(this);
		}
	}

	@RuleVersion(0)
	public final StmListContext stmList() throws RecognitionException {
		StmListContext _localctx = new StmListContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_stmList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LCURLY) | (1L << WHILE) | (1L << IF) | (1L << PRINT) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				setState(91); statement();
				}
				}
				setState(96);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclarationContext extends ParserRuleContext {
		public VarDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDeclaration; }
	 
		public VarDeclarationContext() { }
		public void copyFrom(VarDeclarationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class VarDeclContext extends VarDeclarationContext {
		public TerminalNode SEMICOLON() { return getToken(minijavaParser.SEMICOLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(minijavaParser.IDENTIFIER, 0); }
		public VarDeclContext(VarDeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minijavaListener ) ((minijavaListener)listener).enterVarDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minijavaListener ) ((minijavaListener)listener).exitVarDecl(this);
		}
	}

	@RuleVersion(0)
	public final VarDeclarationContext varDeclaration() throws RecognitionException {
		VarDeclarationContext _localctx = new VarDeclarationContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_varDeclaration);
		try {
			_localctx = new VarDeclContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(97); type();
			setState(98); match(IDENTIFIER);
			setState(99); match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodDeclarationContext extends ParserRuleContext {
		public MethodDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodDeclaration; }
	 
		public MethodDeclarationContext() { }
		public void copyFrom(MethodDeclarationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class MethodDeclContext extends MethodDeclarationContext {
		public TerminalNode RBRACKET() { return getToken(minijavaParser.RBRACKET, 0); }
		public TerminalNode SEMICOLON() { return getToken(minijavaParser.SEMICOLON, 0); }
		public VarDeclListContext varDeclList() {
			return getRuleContext(VarDeclListContext.class,0);
		}
		public StmListContext stmList() {
			return getRuleContext(StmListContext.class,0);
		}
		public TerminalNode LCURLY() { return getToken(minijavaParser.LCURLY, 0); }
		public TerminalNode LBRACKET() { return getToken(minijavaParser.LBRACKET, 0); }
		public TerminalNode RETURN() { return getToken(minijavaParser.RETURN, 0); }
		public TerminalNode RCURLY() { return getToken(minijavaParser.RCURLY, 0); }
		public FormalListContext formalList() {
			return getRuleContext(FormalListContext.class,0);
		}
		public TerminalNode PUBLIC() { return getToken(minijavaParser.PUBLIC, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(minijavaParser.IDENTIFIER, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public MethodDeclContext(MethodDeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minijavaListener ) ((minijavaListener)listener).enterMethodDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minijavaListener ) ((minijavaListener)listener).exitMethodDecl(this);
		}
	}

	@RuleVersion(0)
	public final MethodDeclarationContext methodDeclaration() throws RecognitionException {
		MethodDeclarationContext _localctx = new MethodDeclarationContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_methodDeclaration);
		try {
			_localctx = new MethodDeclContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(101); match(PUBLIC);
			setState(102); type();
			setState(103); match(IDENTIFIER);
			setState(104); match(LBRACKET);
			setState(105); formalList();
			setState(106); match(RBRACKET);
			setState(107); match(LCURLY);
			setState(108); varDeclList();
			setState(109); stmList();
			setState(110); match(RETURN);
			setState(111); expression(0);
			setState(112); match(SEMICOLON);
			setState(113); match(RCURLY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormalContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(minijavaParser.IDENTIFIER, 0); }
		public FormalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minijavaListener ) ((minijavaListener)listener).enterFormal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minijavaListener ) ((minijavaListener)listener).exitFormal(this);
		}
	}

	@RuleVersion(0)
	public final FormalContext formal() throws RecognitionException {
		FormalContext _localctx = new FormalContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_formal);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115); type();
			setState(116); match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
	 
		public TypeContext() { }
		public void copyFrom(TypeContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class TypeIntArrayContext extends TypeContext {
		public TerminalNode RBRACE() { return getToken(minijavaParser.RBRACE, 0); }
		public TerminalNode LBRACE() { return getToken(minijavaParser.LBRACE, 0); }
		public TerminalNode INT() { return getToken(minijavaParser.INT, 0); }
		public TypeIntArrayContext(TypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minijavaListener ) ((minijavaListener)listener).enterTypeIntArray(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minijavaListener ) ((minijavaListener)listener).exitTypeIntArray(this);
		}
	}
	public static class TypeIntegerContext extends TypeContext {
		public TerminalNode INT() { return getToken(minijavaParser.INT, 0); }
		public TypeIntegerContext(TypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minijavaListener ) ((minijavaListener)listener).enterTypeInteger(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minijavaListener ) ((minijavaListener)listener).exitTypeInteger(this);
		}
	}
	public static class TypeIdentifierContext extends TypeContext {
		public TerminalNode IDENTIFIER() { return getToken(minijavaParser.IDENTIFIER, 0); }
		public TypeIdentifierContext(TypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minijavaListener ) ((minijavaListener)listener).enterTypeIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minijavaListener ) ((minijavaListener)listener).exitTypeIdentifier(this);
		}
	}
	public static class TypeBooleanContext extends TypeContext {
		public TerminalNode BOOLEAN() { return getToken(minijavaParser.BOOLEAN, 0); }
		public TypeBooleanContext(TypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minijavaListener ) ((minijavaListener)listener).enterTypeBoolean(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minijavaListener ) ((minijavaListener)listener).exitTypeBoolean(this);
		}
	}

	@RuleVersion(0)
	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_type);
		try {
			setState(124);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				_localctx = new TypeIntArrayContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(118); match(INT);
				setState(119); match(LBRACE);
				setState(120); match(RBRACE);
				}
				break;

			case 2:
				_localctx = new TypeBooleanContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(121); match(BOOLEAN);
				}
				break;

			case 3:
				_localctx = new TypeIntegerContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(122); match(INT);
				}
				break;

			case 4:
				_localctx = new TypeIdentifierContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(123); match(IDENTIFIER);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
